# cjk-text-formatter

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  cjk-text-formatter.toml.example  pyproject.toml  textformat.toml.example
src/cjk_text_formatter/: __init__.py  cjk-text-formatter.toml.example  cli.py  config.py  polish.py  processors.py
src/textformater/: __init__.py  cli.py  config.py  polish.py  processors.py
tests/: __init__.py  test_config.py  test_config_validation.py  test_polish.py  test_polish_with_config.py  test_processors.py
