[build-system]
requires = ["setuptools>=65.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cjk-text-formatter"
version = "1.2.0"
description = "A CLI tool for polishing text with CJK (Chinese, Japanese, Korean) typography rules"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "lixiaolai", email = "xiaolaidev@gmail.com"}
]
keywords = ["text", "formatter", "chinese", "typography", "cjk", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "importlib-resources>=5.0; python_version<'3.9'",
]

[project.urls]
Homepage = "https://github.com/xiaolai/cjk-text-formatter"
Repository = "https://github.com/xiaolai/cjk-text-formatter"
Issues = "https://github.com/xiaolai/cjk-text-formatter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
html = [
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
]

[project.scripts]
ctf = "cjk_text_formatter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cjk_text_formatter = ["cjk-text-formatter.toml.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
